--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Monografia/Monografia/bin/
-Monografia/Monografia/vs/
-Monografia/Monografia/obj/
+BasedOnHarmony/BasedOnHarmony/bin/
+BasedOnHarmony/BasedOnHarmony/obj/
+BasedOnHarmony/.vs/
