--- a/BasedOnHarmony/BasedOnHarmony/BasedOnHarmony.csproj
+++ b/BasedOnHarmony/BasedOnHarmony/BasedOnHarmony.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Funciones\Arista.cs" />
     <Compile Include="Funciones\PMediana.cs" />
     <Compile Include="Metaheuristicas\Algorithm.cs" />
     <Compile Include="Metaheuristicas\Armonicos\HSOS.cs" />
@@ -56,49 +57,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="problemas\pmed1.txt" />
-    <Content Include="problemas\pmed10.txt" />
-    <Content Include="problemas\pmed11.txt" />
-    <Content Include="problemas\pmed12.txt" />
-    <Content Include="problemas\pmed13.txt" />
-    <Content Include="problemas\pmed14.txt" />
-    <Content Include="problemas\pmed15.txt" />
-    <Content Include="problemas\pmed16.txt" />
-    <Content Include="problemas\pmed17.txt" />
-    <Content Include="problemas\pmed18.txt" />
-    <Content Include="problemas\pmed19.txt" />
-    <Content Include="problemas\pmed2.txt" />
-    <Content Include="problemas\pmed20.txt" />
-    <Content Include="problemas\pmed21.txt" />
-    <Content Include="problemas\pmed22.txt" />
-    <Content Include="problemas\pmed23.txt" />
-    <Content Include="problemas\pmed24.txt" />
-    <Content Include="problemas\pmed25.txt" />
-    <Content Include="problemas\pmed26.txt" />
-    <Content Include="problemas\pmed27.txt" />
-    <Content Include="problemas\pmed28.txt" />
-    <Content Include="problemas\pmed29.txt" />
-    <Content Include="problemas\pmed3.txt" />
-    <Content Include="problemas\pmed30.txt" />
-    <Content Include="problemas\pmed31.txt" />
-    <Content Include="problemas\pmed32.txt" />
-    <Content Include="problemas\pmed33.txt" />
-    <Content Include="problemas\pmed34.txt" />
-    <Content Include="problemas\pmed35.txt" />
-    <Content Include="problemas\pmed36.txt" />
-    <Content Include="problemas\pmed37.txt" />
-    <Content Include="problemas\pmed38.txt" />
-    <Content Include="problemas\pmed39.txt" />
-    <Content Include="problemas\pmed4.txt" />
-    <Content Include="problemas\pmed40.txt" />
-    <Content Include="problemas\pmed5.txt" />
-    <Content Include="problemas\pmed6.txt" />
-    <Content Include="problemas\pmed7.txt" />
-    <Content Include="problemas\pmed8.txt" />
-    <Content Include="problemas\pmed9.txt" />
-    <Content Include="problemas\pmedopt.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
