add local search

--- a/BasedOnHarmony/BasedOnHarmony/App.config
+++ b/BasedOnHarmony/BasedOnHarmony/App.config
@@ -10,9 +10,9 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://tesispmedianflp-001-site1.gtempurl.com/Service.svc"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
-                contract="Servidor.IService" name="BasicHttpBinding_IService" />
+            <endpoint address="http://localhost:49702/Service.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IService" contract="Servidor.IService"
+                name="BasicHttpBinding_IService" />
         </client>
     </system.serviceModel>
 </configuration>
