--- a/BasedOnHarmony/BasedOnHarmony/BasedOnHarmony.csproj
+++ b/BasedOnHarmony/BasedOnHarmony/BasedOnHarmony.csproj
@@ -69,14 +69,14 @@
     <None Include="Connected Services\Servidor\BasedOnHarmony.Servidor.DistributeTask.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\Servidor\Service1.wsdl" />
-    <None Include="Connected Services\Servidor\Service3.xsd">
+    <None Include="Connected Services\Servidor\Service.wsdl" />
+    <None Include="Connected Services\Servidor\Service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\Servidor\Service31.xsd">
+    <None Include="Connected Services\Servidor\Service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\Servidor\Service32.xsd">
+    <None Include="Connected Services\Servidor\Service2.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -85,6 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\Servidor\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\Servidor\Service.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\Servidor\configuration91.svcinfo" />
@@ -97,9 +100,6 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\Servidor\Service1.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
