--- a/BasedOnHarmony/BasedOnHarmony/App.config
+++ b/BasedOnHarmony/BasedOnHarmony/App.config
@@ -10,7 +10,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://tesispmedianflp-001-site1.gtempurl.com/Service.svc"
+            <endpoint address="http://pmedian-001-site1.ctempurl.com/Service.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService"
                 contract="Servidor.IService" name="BasicHttpBinding_IService" />
         </client>
